--- a/war/viewForm.html
+++ b/war/viewForm.html
@@ -1,17 +1,17 @@
 <div class="container" ng-init="loadForm()">
-	    
-    User Name : {{username}}
-    Password  :  {{password}}
-   Confirm Password:{{passwordCompare}}
-    First Name :  {{firstname}}
-    Last Name: {{lastname}}
-    Email ID:{{string}}
-    Contact : +91{{phoneno}}
-    Address 1: {{add1}}
-    Address 2: {{add2}}
-     Country  :{{Country}}
-     State : {{selectedState}}
-      City : {{selectedCity}}
-     DOB : {{birth}}
+	
+    User Name : {{username}}<br>
+    Password  :  {{password}}<br>
+   Confirm Password:{{passwordCompare}}<br>
+    First Name :  {{firstname}}<br>
+    Last Name: {{lastname}}<br>
+    Email ID:{{string}}<br>
+    Contact : +91{{phoneno}}<br>
+    Address 1: {{add1}}<br>
+    Address 2: {{add2}}<br>
+     Country  :{{Country}}<br>
+     State : {{selectedState}}<br>
+      City : {{selectedCity}}<br>
+     DOB : {{birth}}<br>
     
 </div>
